Erfolgs- und Fehlermeldung fuer Kontaktformular, Google Maps auf Kontaktseite

--- a/client/views/homepage/homepage.html
+++ b/client/views/homepage/homepage.html
@@ -90,7 +90,7 @@
   <div class="grid-wrapper zitat-slideshow">
     <div class="grid-wrapper graueLinie">
 		  <div class="portrait-container">
-			  <img src="/img/homepage/favorit.png" alt="favor.it-Logo" class="portrait">
+			  <img src="/img/homepage/favorit_neu.png" alt="favor.it-Logo" class="portrait">
 		  </div>
 		  <div class="zitat-box">
 			  <span class="zitat">
@@ -132,118 +132,142 @@
 		<a href="#" class="open-link aktivwerden-button">
 		</a>
   </div>
-  
+
   <div class="overlay-outer">
   </div>
-  <div class="overlay-inner">
-  	<div class="conversionbox-outer">
-			<div class="conversionbox">
-				<a href="#" class="close-link">
-					<img src="/img/close.png" alt="Close-Button" class="close">
-				</a>
-				<div class="whitebg conversion-header">
-					<h4 class="headline-conversionbox tel-icon">
-						Nehmen Sie Kontakt auf
-					</h4>
-				</div>
-				<form class="conversionbox-inner">  		
-					<div class="portrait-mark portrait-mark-formular">
-						<img src="/img/mark.jpg" alt="Portrait Mark Reich" class="photo-mark">
-						<br>
-						Mark Reich, Gr&uuml;nder
-					</div>
-					<div class="telefon">
-						<p class="zeile1">
-							Rufen Sie uns an
-						</p>				
-						<p class="telNr">
-							030 609 8448 - 11		
-						</p>		
-						<p class="zeile3">
-							Wir freuen uns auf Sie!
-						</p>				
-					</div>
-					<h4>
-						Oder fordern Sie einen R&uuml;ckruf an:
-					</h4>
-					<div class="formular-zeile">
-						<label for="name">
-							Name
-						</label>
-						<span class="formular-feld">
-							<input type="text" name="name" id="name">
-						</span>
-					</div>
-					<div class="formular-zeile">
-						<label for="telefon">
-							Telefon
-						</label>
-						<span class="formular-feld">
-							<input type="text" name="telefon" id="telefon">
-						</span>
-					</div>
-					<div class="formular-zeile">
-						<label for="mail">
-							E-Mail
-						</label>
-						<span class="formular-feld">
-							<input type="text" name="mail" id="mail">
-						</span>
-					</div>
-					<div class="formular-zeile">
-						<label for="unternehmen">
-							Unternehmen
-						</label>
-						<span class="formular-feld">
-							<input type="text" id="unternehmen" name="unternehmen">
-						</span>
-					</div>
-					<div class="newsletterbox">
-						<input type="checkbox" name="newsletter" id="newsletter" value="yes">
-						<label for="newsletter" class="newsletterLabel">
-							ja, ich m&ouml;chte aktuelle Informationen von AboutLocal erhalten.
-						</label>
-					</div>
-					<div class="abschicken-box">
-						<button class="rueckrufButton button">
-							<div class="rueckrufBild button-bild">
-								R&uuml;ckruf anfordern
-							</div>
-						</button>
-						<br>
-						<a href="#" class="close-link">
-							abbrechen
-						</a>
-					</div>
-				</form>  		
-			</div>
-  	</div>
-  </div>
-  
-  <div class="overlay-inner">
-  	<div class="conversionbox-outer">
-			<div class="conversionbox">
-				<a href="#" class="close-link">
-					<img src="/img/close.png" alt="Close-Button" class="close">
-				</a>
-				<div class="whitebg conversion-header">
-					<h4 class="headline-conversionbox tel-icon">
-						Nehmen Sie Kontakt auf
-					</h4>
-				</div>
-				<div class="conversionbox-inner">  		
-          <h2>
-            Vielen Dank f&uuml;r ihre Anfrage!
-          </h2>
-          Ihre Nachricht ist bei uns eingegangen. Wir werden uns schnellstm&ouml;glich bei Ihnen melden.
-					<div class="portrait-mark">
-						<img src="/img/mark.jpg" alt="Portrait Mark Reich" class="photo-mark">
-						<br>
-						Mark Reich, Gr&uuml;nder
-					</div>
-				</div>  		
-			</div>
-  	</div>
+  <div class="overlay-slideshow">
+    <div class="overlay-inner">
+    	<div class="conversionbox-outer">
+			  <div class="conversionbox">
+				  <a href="#" class="close-link">
+					  <img src="/img/close.png" alt="Close-Button" class="close">
+				  </a>
+				  <div class="whitebg conversion-header">
+					  <h4 class="headline-conversionbox tel-icon">
+						  Nehmen Sie Kontakt auf
+					  </h4>
+				  </div>
+				  <form class="conversionbox-inner">  		
+					  <div class="portrait-mark portrait-mark-formular">
+						  <img src="/img/mark.jpg" alt="Portrait Mark Reich" class="photo-mark">
+						  <br>
+						  Mark Reich, Gr&uuml;nder
+					  </div>
+					  <div class="telefon">
+						  <p class="zeile1">
+							  Rufen Sie uns an
+						  </p>				
+						  <p class="telNr">
+							  030 609 8448 - 11		
+						  </p>		
+						  <p class="zeile3">
+							  Wir freuen uns auf Sie!
+						  </p>				
+					  </div>
+					  <h4>
+						  Oder fordern Sie einen R&uuml;ckruf an:
+					  </h4>
+					  <div class="formular-zeile">
+						  <label for="name">
+							  Name
+						  </label>
+						  <span class="formular-feld">
+							  <input type="text" name="name" id="name">
+						  </span>
+					  </div>
+					  <div class="formular-zeile">
+						  <label for="telefon">
+							  Telefon
+						  </label>
+						  <span class="formular-feld">
+							  <input type="text" name="telefon" id="telefon">
+						  </span>
+					  </div>
+					  <div class="formular-zeile">
+						  <label for="mail">
+							  E-Mail
+						  </label>
+						  <span class="formular-feld">
+							  <input type="text" name="mail" id="mail">
+						  </span>
+					  </div>
+					  <div class="formular-zeile">
+						  <label for="unternehmen">
+							  Unternehmen
+						  </label>
+						  <span class="formular-feld">
+							  <input type="text" id="unternehmen" name="unternehmen">
+						  </span>
+					  </div>
+					  <div class="newsletterbox">
+						  <input type="checkbox" name="newsletter" id="newsletter" value="yes">
+						  <label for="newsletter" class="newsletterLabel">
+							  ja, ich m&ouml;chte aktuelle Informationen von AboutLocal erhalten.
+						  </label>
+					  </div>
+					  <div class="abschicken-box">
+						  <button class="rueckrufButton button">
+							  <div class="rueckrufBild button-bild">
+								  R&uuml;ckruf anfordern
+							  </div>
+						  </button>
+						  <br>
+						  <a href="#" class="close-link">
+							  abbrechen
+						  </a>
+					  </div>
+				  </form>  		
+			  </div>
+    	</div>
+    </div>
+    
+    
+    <div class="overlay-inner">
+    	<div class="conversionbox-outer">
+			  <div class="conversionbox">
+				  <a href="#" class="close-link">
+					  <img src="/img/close.png" alt="Close-Button" class="close">
+				  </a>
+				  <div class="whitebg conversion-header">
+					  <h4 class="headline-conversionbox tel-icon">
+						  Nehmen Sie Kontakt auf
+					  </h4>
+				  </div>
+				  <div class="conversionbox-inner vielen-dank-box">  		
+            <h2>
+              Vielen Dank f&uuml;r ihre Anfrage!
+            </h2>
+            Ihre Nachricht ist bei uns eingegangen. Wir werden uns schnellstm&ouml;glich bei Ihnen melden.
+					  <div class="portrait-mark portrait-mark-danke">
+						  <img src="/img/mark.jpg" alt="Portrait Mark Reich" class="photo-mark">
+						  <br>
+						  Mark Reich, Gr&uuml;nder
+					  </div>
+				  </div>  		
+			  </div>
+    	</div>
+    </div>
+
+    <div class="overlay-inner">
+    	<div class="conversionbox-outer">
+			  <div class="conversionbox">
+				  <a href="#" class="close-link">
+					  <img src="/img/close.png" alt="Close-Button" class="close">
+				  </a>
+				  <div class="whitebg conversion-header">
+					  <h4 class="headline-conversionbox tel-icon">
+						  Nehmen Sie Kontakt auf
+					  </h4>
+				  </div>
+				  <div class="conversionbox-inner fehlermeldung-box">  		
+            <h2>
+              Es ist ein Fehler aufgetreten!
+            </h2>
+            Ihre Nachricht konnte nicht &uuml;bermittelt werden. Bitte laden Sie die Seite neu und versuchen Sie es noch einmal.
+				  </div>  		
+			  </div>
+    	</div>
+    </div>
   </div>
 
 {{invokeAfterLoad}}  
