--- a/client/views/kontakt/kontakt.html
+++ b/client/views/kontakt/kontakt.html
@@ -1,7 +1,6 @@
 <head>
-
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-<script type="text/javascript">window.setTimeout("initGmaps();",300);function initGmaps(){var myOptions = {zoom:17,center:new google.maps.LatLng(52.53197, 13.42739000000006),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);marker = new google.maps.Marker({map: map, position: new google.maps.LatLng(52.53197, 13.42739000000006)});infowindow = new google.maps.InfoWindow({content: "<b>aboutLocal GmbH </b><br>Greifswalder Str. 212<br>10405 Berlin"});google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});infowindow.open(map,marker);}</script>
+<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyA76GsfIZEhzF6byO0sCz2XXkh23nMXadQ&sensor=false">
+</script>
 
 </head>
 <template name="kontakt">
@@ -27,12 +26,14 @@
   	<a href="mailto:beta@about-local.com">
   	  beta@about-local.com
   	</a>
-  	<p class="handwriting">
-  	  Wir freuen uns auf Sie!
-  	</p>
-  	
+      <img src="img/kontakt/kontakt-handschrift.png" class="handwriting" alt="Wir freuen uns auf Sie!">
 
-<div  style="overflow:hidden;height:320px;width:450px;"><div id="map_canvas" style="height:320px;width:450px;"></div></div>
+<div class="google-map">
+<div class="map-container portrait">
+  <div class="map_canvas">
+  </div>
+</div>
+</div>
 
 
 
@@ -45,4 +46,6 @@
       Greifswalder Str. 212 &middot; 10405 Berlin
   	</p>
   </div>
+
+{{invokeAfterLoad}}  
 </template>
