--- a/client/views/navigation/navigation.html
+++ b/client/views/navigation/navigation.html
@@ -4,6 +4,7 @@
       <img class="logo" src="/img/logo-top.gif">
       {{> navCurrentGroup}}
       <ul class="nav-right">
+        <li class="rule"></li>
         <li class="tour"><a href="/tour">Tour</a></li>
         <li class="home"><a href="/">Home</a></li>
         <li class="login">
