--- a/sphere.styl
+++ b/sphere.styl
@@ -206,6 +206,14 @@ bar-chart(barWidth, barHeight, borderWidth=3px)
         border 1px solid #72ad16
         background-color green2 * 1.3
 
+user-select(value)
+    -webkit-touch-callout: value;
+    -webkit-user-select: value;
+    -khtml-user-select: value;
+    -moz-user-select: value;
+    -ms-user-select: value;
+    user-select: value;
+
 *
     font-size font-size px
     font-family "myriad-pro", sans-serif
@@ -343,22 +351,20 @@ transition()
     top 0
     z-index 100
     gradient-color = #f8f8f8
-    box-shadow 0 1px 0 0 #3a3d40, 0 2px 0 0 #323233, 0 lines1 lines1 gradient-color, 0 lines1 + 20px 50px gradient-color
+    box-shadow inset 0 -1px 0 0 #333334, inset 0 -2px 0 0 #3a3d40, 0 lines1 lines1 gradient-color, 0 lines1 + 20px 50px gradient-color
+    user-select none
+    cursor default
+    bar-height = 50px
     .grid-wrapper
-        line-height (43 / EM)
-        height (43/EM)
-        padding-top (5/EM)
+        line-height bar-height
+        height bar-height
     .logo
         width (148/EM)
         height (24/EM)
-        vertical-align top
-        margin-top 9px
-        margin-right 14px
-    span, a
-        //vertical-align baseline
+        margin-bottom -5px
+    span, .nav-right a, a.selected-group
+        vertical-align baseline
         display inline-block
-        box-sizing border-box
-        padding-top 1px
     .selected-group, .companies-count
         font-weight semibold
         color white
@@ -374,8 +380,46 @@ transition()
     .nav-right
         float right
         font-weight semibold
+        font-size 0
+        height bar-height
+        li.rule
+            height 42px
+            border-left 1px solid #818485
+            width 0
+            padding 0
+            font-size 0
+            vertical-align top
+            margin-top 4px
         li
+            font-size 16px
+            padding-top 2px
+            height bar-height
             display inline-block
+            box-sizing border-box
+            transition background-color 250ms ease-in-out
+            link-padding = 10px
+            &:hover
+                background-color black
+            &.tour
+                a
+                    background url(img/looking-glass.png) link-padding 50% no-repeat
+                    padding-left 31px + link-padding
+            &.home
+                a
+                    background url(img/home.png) link-padding 50% no-repeat
+                    padding-left 24px + link-padding
+            &.login
+                margin-right: -1 * link-padding
+                a
+                    background url(img/key.png) link-padding 50% no-repeat
+                    padding-left 31px + link-padding
+            a
+                transition opacity 150ms ease-in-out
+                color white
+                opacity .5
+                padding 0 link-padding
+                &:hover
+                    opacity 1
             /*transition background-color 200ms ease-in-out
             &:hover
                 background black
