--- a/sphere.styl
+++ b/sphere.styl
@@ -351,7 +351,7 @@ transition()
     top 0
     z-index 100
     gradient-color = #f8f8f8
-    box-shadow inset 0 -1px 0 0 #333334, inset 0 -2px 0 0 #3a3d40, 0 lines1 lines1 gradient-color, 0 lines1 + 20px 50px gradient-color
+    box-shadow inset 0 -1px 0 0 #333334, inset 0 -2px 0 0 #3a3d40, 0 5px 0 0 rgba(255,255,255,0.5), 0 6px 6px 0 rgba(0,0,0,0.18)
     user-select none
     cursor default
     bar-height = 50px
