--- a/client/views/navigation/navCurrentGroup.html
+++ b/client/views/navigation/navCurrentGroup.html
@@ -1,5 +1,3 @@
 <template name="navCurrentGroup">
-    <a class="selected-group current-search">Aktuelle Suche</a>
-    <span class="companies-count">9.590</span>
-    <span class="small">Unternehmen</span>
+    <a class="selected-group current-search">Beta Teilnehmer gesucht</a>
 </template>
