keine Links auf der homepage

--- a/sphere.styl
+++ b/sphere.styl
@@ -1034,8 +1034,9 @@ myGray4 = #cacbcc
     display inline-block
     background-image url('/img/homepage/partner-logos.png')
   
-    &:hover
+    /*&:hover
       background-position 0 -65px
+    */
   
   .adSearchEngine-logo
     background transparent no-repeat -169px 0px
@@ -1044,8 +1045,9 @@ myGray4 = #cacbcc
     display inline-block
     background-image url('/img/homepage/partner-logos.png')
   
-    &:hover
+    /*&:hover
       background-position -169px -65px
+    */
   
   .semrush-logo
     background transparent no-repeat -250px 0px
@@ -1054,8 +1056,10 @@ myGray4 = #cacbcc
     display inline-block
     background-image url('/img/homepage/partner-logos.png')
   
+    /*
     &:hover
       background-position -250px -65px
+    */
   
 .graueLinie
   padding-top ( line-height - 1 ) px
@@ -1233,7 +1237,8 @@ overlay-duration = 0.2s
 
     .telNr
       font-size 25px
-      line-height 50px
+      line-height 40px
+      font-weight semibold
 
     .zeile3
       font-size 17px
