add pp and imprint

--- a/client/views/footer/footer.html
+++ b/client/views/footer/footer.html
@@ -22,10 +22,10 @@
           <header>Rechtliches</header>
         </li>
         <li>
-          <a href="#">Impressum</a>
+          <a href="/impressum">Impressum</a>
         </li>
         <li>
-          <a href="#">Datenschutz</a>
+          <a href="/datenschutz">Datenschutz</a>
         </li>
       </ul>
       <ul class="social-media">
