--- a/sphere.styl
+++ b/sphere.styl
@@ -362,12 +362,14 @@ transition()
         width (148/EM)
         height (24/EM)
         margin-bottom -5px
+        margin-right 40px
     span, .nav-right a, a.selected-group
         vertical-align baseline
         display inline-block
     .selected-group, .companies-count
         font-weight semibold
         color white
+        font-style italic
     .nav-right
         float right
         font-weight semibold
