direktlinks auf die slides

--- a/client/views/homepage/homepage.html
+++ b/client/views/homepage/homepage.html
@@ -1,8 +1,8 @@
 <template name="homepage">
 	<div class="whitebg homepage-bg">
 		<div class="greeting grid-wrapper">
-			<img src="img/homepage/headline.png" class="headline" alt="unlock the local web">
-			<img src="img/homepage/screens3.png" class="screens" alt="Beispiel Screen">
+			<img src="/img/homepage/headline.png" class="headline" alt="unlock the local web">
+			<img src="/img/homepage/screens3.png" class="screens" alt="Beispiel Screen">
 	<!--
 			<h1>
 				Unlock
@@ -44,7 +44,7 @@
 				<p class="function-description">
 					Mit unseren detaillierten Firmenprofilen sparen Sie Zeit und Ressourcen im Vertrieb an lokale Unternehmen.
 				</p>
-				<a href="#">mehr Informationen</a>
+				<a href="/tour/profile-slide/">mehr Informationen</a>
 			</li>
 			<li>
 				<h4 class="headline-kunden">
@@ -55,7 +55,7 @@
 				<p class="function-description">
 				Unsere Unternehmensfilter erm&ouml;glichen Ihnen eine genaue Eingrenzung Ihrer Zielgruppe auf Basis der Online-Aktivit&auml;ten.
 				</p>
-				<a href="/tour">mehr Informationen</a>
+				<a href="/tour/filter-slide/">mehr Informationen</a>
 			</li>
 			<li class="lastItem">
 				<h4 class="headline-deal">
@@ -69,7 +69,7 @@
 				<p class="function-description">
 				Erfahren Sie, welche Unternehmen bereits bei Groupon und co aktiv geworden sind. Wie steht es um Ihre Werbekunden?
 				</p>
-				<a href="#">mehr Informationen</a>
+				<a href="/tour/deal-slide/">mehr Informationen</a>
 			</li>
 		</ul>
   </div>
