--- a/client/views/kontakt/kontakt.html
+++ b/client/views/kontakt/kontakt.html
@@ -14,19 +14,19 @@
     <h4>
       If you have any questions or comments, please get in touch:
     </h4>
-  	<img src="img/kontakt/tel-gross.png" class="kontakt-symbol" alt="Telefon-Symbol">
+  	<img src="/img/kontakt/tel-gross.png" class="kontakt-symbol" alt="Telefon-Symbol">
   	<p class="telefonnummer">
   	  030 609 8448 - 11
   	</p>
   	<p class="oder">
   	  oder
   	</p>
-  	<img src="img/kontakt/mail-gross.png" class="kontakt-symbol mail-bild" alt="Email-Symbol">
+  	<img src="/img/kontakt/mail-gross.png" class="kontakt-symbol mail-bild" alt="Email-Symbol">
   	<br>
   	<a href="mailto:beta@about-local.com">
   	  beta@about-local.com
   	</a>
-      <img src="img/kontakt/kontakt-handschrift.png" class="handwriting" alt="Wir freuen uns auf Sie!">
+      <img src="/img/kontakt/kontakt-handschrift.png" class="handwriting" alt="Wir freuen uns auf Sie!">
 
 <div class="google-map">
 <div class="map-container portrait">
