--- a/client/views/tour/tour.html
+++ b/client/views/tour/tour.html
@@ -3,7 +3,7 @@
 		<div class="tour-navigation grid-wrapper">
 			<a href="#" class="pfeil-links tour-slider">
 				<div class="pfeil-container">
-					<img src="img/tour/pfeil-links.png" alt="Pfeil nach links" class="pfeil">
+					<img src="/img/tour/pfeil-links.png" alt="Pfeil nach links" class="pfeil">
 				</div>
 			</a>
 			<div class="ul-container">
@@ -12,7 +12,7 @@
 					<a href="#" class="tour-slider profile-slide">
 						&nbsp;
 						<li>
-							<img src="img/tour/marker.png" alt="Marker" class="marker">
+							<img src="/img/tour/marker.png" alt="Marker" class="marker">
 							Firmenprofile
 						</li>
 					</a>
@@ -45,7 +45,7 @@
 			</div>
 			<a href="#" class="pfeil-rechts tour-slider">
 				<div class="pfeil-container pfeil-container-rechts">
-					<img src="img/tour/pfeil-rechts.png" alt="Pfeil nach rechts" class="pfeil">
+					<img src="/img/tour/pfeil-rechts.png" alt="Pfeil nach rechts" class="pfeil">
 				</div>
 			</a>
 		</div>
@@ -80,7 +80,7 @@
 			</a>
 		</div>
 		<div class="screen-box">
-			<img src="img/tour/profile-screen.png" alt="Ausschnitt aus unseren Firmenprofilen">
+			<img src="/img/tour/profile-screen.png" alt="Ausschnitt aus unseren Firmenprofilen">
 			<p>
 				Ausschnitt aus unseren Firmenprofilen
 			</p>
@@ -115,7 +115,7 @@
 			</a>
 		</div>
 		<div class="screen-box">
-			<img src="img/tour/filter-screen.png" alt="Unsere Filterfunktion">
+			<img src="/img/tour/filter-screen.png" alt="Unsere Filterfunktion">
 			<p>
 				Unsere Filterfunktion
 			</p>
@@ -152,13 +152,13 @@
 			</a>
 		</div>
 		<div class="screen-box">
-			<img src="img/tour/export-screen.png" alt="Export-Optionen">
+			<img src="/img/tour/export-screen.png" alt="Export-Optionen">
 			<p>
 				&nbsp;
 			</p>
 		</div>
 		<div class="screen-box overlay-screenbox">
-				<img src="img/tour/export-screen2.png" alt="Exportierte Exceldatei">
+				<img src="/img/tour/export-screen2.png" alt="Exportierte Exceldatei">
 			<p>
 				Exportierte Exceldatei
 			</p>
@@ -193,7 +193,7 @@
 			</a>
 		</div>
 		<div class="screen-box">
-			<img src="img/tour/deal-screen.png" alt="Gutschein-Daten als Exceldatei exportiert">
+			<img src="/img/tour/deal-screen.png" alt="Gutschein-Daten als Exceldatei exportiert">
 			<p>
 				Gutschein-Daten als Exceldatei exportiert
 			</p>
