--- a/sphere.styl
+++ b/sphere.styl
@@ -1206,10 +1206,12 @@ overlay-duration = 0.2s
   width 100%
   margin-top -800px
   z-index 101
-  transition margin-top overlay-duration
+  opacity 0
+  transition all overlay-duration
 
   &.visible
     margin-top 0px
+    opacity 1
 
 .overlay-inner
   z-index 102
