--- a/client/views/footer/footer.html
+++ b/client/views/footer/footer.html
@@ -14,7 +14,7 @@
           <header>Unternehmen</header>
         </li>
         <li>
-          <a href="#">Team &amp; Jobs</a>
+          <a href="http://static.about-local.com/team.html">Team &amp; Jobs</a>
         </li>
       </ul>
       <ul>
