html gets footer bg color for large screens

--- a/sphere.styl
+++ b/sphere.styl
@@ -273,6 +273,7 @@ a.details
         color #b1b2b3
     a:hover
         color white
+#top-nav, footer, #dropdown-login-form, html
     background gray1
 
 .ie #dropdown-login-form
