--- a/client/views/homepage/homepage.html
+++ b/client/views/homepage/homepage.html
@@ -67,7 +67,7 @@
 					</span>
 				</h4>
 				<p class="function-description">
-				Erfahren Sie, welche Unternehmen bereits bei Groupon und co aktiv geworden sind. Wie steht es um Ihre Werbekunden?
+				Erfahren Sie, welche Unternehmen bereits bei Groupon &amp; Co. aktiv geworden sind. Wie steht es um Ihre Werbekunden?
 				</p>
 				<a href="/tour/deal-slide/">mehr Informationen</a>
 			</li>
