--- a/client/views/navigation/navCurrentGroup.html
+++ b/client/views/navigation/navCurrentGroup.html
@@ -1,3 +1,3 @@
 <template name="navCurrentGroup">
-    <a class="selected-group current-search">Beta Teilnehmer gesucht</a>
+    <a class="selected-group current-search">Wir suchen Innovationspartner!</a>
 </template>
