new team page, partial translation

--- a/client/views/homepage/homepage.html
+++ b/client/views/homepage/homepage.html
@@ -25,8 +25,8 @@
 			 </h3>
 	-->
 			<a href="#" class="open-link">
-				<button class="testzugang button">
-					<div class="haken button-bild">
+				<button class="trialaccess button">
+					<div class="tick button-image">
 						Kostenlosen Testzugang anfordern
 					</div>
 				</button>
@@ -36,7 +36,7 @@
 	<div class="functions grid-wrapper">
 		<ul>
 			<li>
-				<h4 class="headline-pfeil">
+				<h4 class="headline-arrow">
 					<span class="function-headline">
 					Effiziente Lead-Generierung
 					</span>
@@ -47,7 +47,7 @@
 				<a href="/tour/profile-slide/">mehr Informationen</a>
 			</li>
 			<li>
-				<h4 class="headline-kunden">
+				<h4 class="headline-customer">
 					<span class="function-headline">
 					Genaue Zielgruppenauswahl
 					</span>
@@ -61,7 +61,7 @@
 				<h4 class="headline-deal">
 					<span class="function-headline">
 						Gutschein-Special
-					<span class="aktion">
+					<span class="special">
 						AKTION
 					</span>
 					</span>
@@ -79,7 +79,7 @@
   	</h3>
   </div>
 
-  <div class="grid-wrapper graueLinie partner-box">
+  <div class="grid-wrapper grayLine partner-box">
   	<span class="seitwert-logo partner-link">
     </span>
   	<span class="adSearchEngine-logo partner-link">
@@ -87,43 +87,43 @@
   	<span class="semrush-logo partner-link">
     </span>
   </div>
-  <div class="grid-wrapper zitat-slideshow">
-    <div class="grid-wrapper graueLinie">
+  <div class="grid-wrapper quote-slideshow">
+    <div class="grid-wrapper grayLine">
 		  <div class="portrait-container">
-			  <img src="/img/homepage/favorit_neu.png" alt="favor.it-Logo" class="portrait">
+			  <img src="/img/homepage/favorit.png" alt="favor.it-Logo" class="portrait">
 		  </div>
-		  <div class="zitat-box">
-			  <span class="zitat">
+		  <div class="quote-box">
+			  <span class="quote">
 				  Im lokalen Werbemarkt ist der Vertriebsaufwand eine der gro&szlig;en H&uuml;rden f&uuml;r innovative Startups. Um unsere Ressourcen m&ouml;glichst effizient einzusetzen bauen wir auf qualifizierte Leads von AboutLocal!
 			  </span>
-			  <span class="zitatautor">
+			  <span class="quote-author">
 				  David Federhen, Co-Gr&uuml;nder von favor.it
 			  </span>
 		  </div>
     </div>
-    <div class="grid-wrapper graueLinie">
+    <div class="grid-wrapper grayLine">
 		  <div class="portrait-container">
 			  <img src="/img/homepage/rp-online.png" alt="RP-Online-Logo" class="portrait">
 		  </div>
-		  <div class="zitat-box">
-			  <span class="zitat">
+		  <div class="quote-box">
+			  <span class="quote">
 				  AboutLocal schlie&szlig;t mit seinem Angebot eine gro&szlig;e L&uuml;cke. Wir sehen darin das Potential, Transparenz im lokalen Online-Markt zu bekommen, sowie den Vertrieb von Werbeleistungen an lokale Unternehmen zu optimieren.
 			  </span>
-			  <span class="zitatautor">
+			  <span class="quote-author">
 				  Oliver Horst, Gesch&auml;ftsf&uuml;hrer RP Online
 			  </span>
 		  </div>
     </div>
   </div>
 
-  <div class="grid-wrapper aktiv-werden">
+  <div class="grid-wrapper act-now">
 	  <h3>
 	  	Jetzt <strong>aktiv werden</strong>
 	  </h3>
 		<h4>
 			Mit AboutLocal verstehen, wie sich lokale Unternehmen im Internet vermarkten!
 		</h4>
-		<a href="#" class="open-link aktivwerden-button">
+		<a href="#" class="open-link act-now-button">
 		</a>
   </div>
 
@@ -142,55 +142,55 @@
 					  </h4>
 				  </div>
 				  <form class="conversionbox-inner">  		
-					  <div class="portrait-mark portrait-mark-formular">
+					  <div class="portrait-mark portrait-mark-form">
 						  <img src="/img/mark.jpg" alt="Portrait Mark Reich" class="photo-mark">
 						  <br>
 						  Mark Reich, Gr&uuml;nder
 					  </div>
-					  <div class="telefon">
-						  <p class="zeile1">
+					  <div class="telephone">
+						  <p class="line1">
 							  Rufen Sie uns an
 						  </p>				
-						  <p class="telNr">
+						  <p class="telNo">
 							  030 609 8448 - 11		
 						  </p>		
-						  <p class="zeile3">
+						  <p class="line3">
 							  Wir freuen uns auf Sie!
 						  </p>				
 					  </div>
 					  <h4>
 						  Oder fordern Sie einen R&uuml;ckruf an:
 					  </h4>
-					  <div class="formular-zeile">
+					  <div class="form-line">
 						  <label for="name">
 							  Name
 						  </label>
-						  <span class="formular-feld">
+						  <span class="form-field">
 							  <input type="text" name="name" id="name">
 						  </span>
 					  </div>
-					  <div class="formular-zeile">
-						  <label for="telefon">
+					  <div class="form-line">
+						  <label for="telephone">
 							  Telefon
 						  </label>
-						  <span class="formular-feld">
-							  <input type="text" name="telefon" id="telefon">
+						  <span class="form-field">
+							  <input type="text" name="telephone" id="telephone">
 						  </span>
 					  </div>
-					  <div class="formular-zeile">
-						  <label for="mail">
+					  <div class="form-line">
+						  <label for="email">
 							  E-Mail
 						  </label>
-						  <span class="formular-feld">
-							  <input type="text" name="mail" id="mail">
+						  <span class="form-field">
+							  <input type="text" name="email" id="email">
 						  </span>
 					  </div>
-					  <div class="formular-zeile">
-						  <label for="unternehmen">
+					  <div class="form-line">
+						  <label for="company">
 							  Unternehmen
 						  </label>
-						  <span class="formular-feld">
-							  <input type="text" id="unternehmen" name="unternehmen">
+						  <span class="form-field">
+							  <input type="text" id="company" name="company">
 						  </span>
 					  </div>
 					  <div class="newsletterbox">
@@ -199,9 +199,9 @@
 							  Ja, ich m&ouml;chte aktuelle Informationen von AboutLocal erhalten.
 						  </label>
 					  </div>
-					  <div class="abschicken-box">
-						  <button class="rueckrufButton button">
-							  <div class="rueckrufBild button-bild">
+					  <div class="submit-box">
+						  <button class="call-back-button button">
+							  <div class="call-back-image button-image">
 								  R&uuml;ckruf anfordern
 							  </div>
 						  </button>
@@ -227,12 +227,12 @@
 						  Nehmen Sie Kontakt auf
 					  </h4>
 				  </div>
-				  <div class="conversionbox-inner vielen-dank-box">  		
+				  <div class="conversionbox-inner thankyou-box">  		
             <h2>
               Vielen Dank f&uuml;r ihre Anfrage!
             </h2>
             Ihre Nachricht ist bei uns eingegangen. Wir werden uns schnellstm&ouml;glich bei Ihnen melden.
-					  <div class="portrait-mark portrait-mark-danke">
+					  <div class="portrait-mark portrait-mark-thankyou">
 						  <img src="/img/mark.jpg" alt="Portrait Mark Reich" class="photo-mark">
 						  <br>
 						  Mark Reich, Gr&uuml;nder
