fix team page link and flag image

--- a/sphere.styl
+++ b/sphere.styl
@@ -1613,7 +1613,7 @@ slideAbstand = 300
 .openings-button
   display block
   background transparent no-repeat 0px 0px
-  background-image url('/img/team/job-fahnen.png')
+  background-image url('/img/team/job-flags.png')
   width 91px
   height 142px
   position absolute
